# security-project

app-sample/app/: CMakeLists.txt  build.gradle
app-sample/app/src/androidTest/java/com/min/app/sample/: ExampleInstrumentedTest.java
app-sample/app/src/main/: AndroidManifest.xml
app-sample/app/src/main/cpp/: common.cpp  common.h  logUtil.h  native-lib.cpp
app-sample/app/src/main/java/com/min/app/sample/: App.java  DataManager.java  EnumerateClass.java  MainActivity.java  User.java  Utils.java
app-sample/app/src/main/res/layout/: activity_main.xml
app-sample/app/src/test/java/com/min/app/sample/: ExampleUnitTest.java
app-sample/gradle/wrapper/: gradle-wrapper.properties
dex/: HelloWorld.java
frida-script/: .gitignore  requirements.txt
frida-script/src/: hook.py  kit.py
frida-script/src/script/: dump_dex_1.js  dump_dex_2.js  dump_dex_3.js  hook.js  qu_tou_tiao.js  sample.js  tool.js
make-money/: README.md  build.gradle
make-money/app/: build.gradle
make-money/app/src/androidTest/java/com/min/money/test/: AutoScript.java  BaseAuto.java
make-money/app/src/main/: AndroidManifest.xml
make-money/app/src/main/assets/: auto.apk
make-money/app/src/main/java/com/min/money/: MainActivity.java
make-money/app/src/main/res/layout/: activity_main.xml
make-money/app/src/main/res/values/: strings.xml
make-money/app/src/main/res/xml/: file_paths.xml
make-money/app/src/test/java/com/min/money/: ExampleUnitTest.java
make-money/gradle/wrapper/: gradle-wrapper.properties
xposed/: com.min.dump.apk  com.min.zeok.hook.apk  com.min.zeok.upload.apk
(+24 files in other folders)
